Finished caluclation with exponential law, TODO: gauss + poisson

--- a/Myon/Protokoll/LM_Protokoll_main.tex
+++ b/Myon/Protokoll/LM_Protokoll_main.tex
@@ -28,9 +28,10 @@
 \tableofcontents
 \newpage 
 
-\input{LM_Protokoll_intro}		% Physikalischer Hintergrund
-\input{LM_Protokoll_experiment}			% Durchführung
-\input{LM_Protokoll_diskussion}		% Auswertung
+\input{LM_Protokoll_intro}			% Physikalischer Hintergrund
+\input{LM_Protokoll_experiment}		% Durchführung
+\input{LM_Protokoll_ausw}			% Auswertung
+\input{LM_Protokoll_diskussion}		% Diskussion
 \include{LM_Protokoll_literatur}
 
 \end{document}
