--- a/Myon/Protokoll/LM_Protokoll_intro.tex
+++ b/Myon/Protokoll/LM_Protokoll_intro.tex
@@ -1,17 +1,17 @@
 \section{Einführung}
 	
-		\begin{figure}[Ht]
+		\begin{figure}[hp]
 			\centering
-			\scalebox{0.7}[0.7]{
+			\scalebox{0.5}[0.5]{
 			\input{pic/myonzerfall.pdf_tex}
 			}
 			\label{fig:myonzerfall}
 			\caption{Feynman-Diagramm des Antimyonenzerfalls.}
 		\end{figure}
 	
-		\begin{figure}[Ht]
+		\begin{figure}[hp]
 			\centering
-			\scalebox{1.3}[1.3]{
+			\scalebox{1.}[1.]{
 			\input{pic/myoneneinfang.pdf_tex}
 			}
 			\label{fig:myoneinfang}
