Corrected a formula in DO

--- a/DO/Protokoll/DO_Protokoll_df.tex
+++ b/DO/Protokoll/DO_Protokoll_df.tex
@@ -73,7 +73,7 @@ Die Drehung der zylindrischen Ionenstrahlkammer wurde um die z-Achse vorgenommen
 \.D bezeichnet die Luftdruck-Temperatur-korrigierte Dosisleistung. Sie ergibt sich folgendermaßen aus Formel (\ref{formel:kappa}):
 
 \begin{equation*}
-        \dot D = \kappa D_0 \ \text{ mit } \ \kappa = \frac{\rho}{\rho_0} = \frac{T}{T_0} \frac{p_0}{p}
+        \dot D = \kappa \dot{D_0} \ \text{ mit } \ \kappa = \frac{\rho}{\rho_0} = \frac{T}{T_0} \frac{p_0}{p}
 \end{equation*}
 \ \\
 Dies führt uns auf folgenden Fehler:
