Finished introduction about myons and added tasks and measuredata for EBIS

--- a/Myon/Protokoll/LM_Protokoll_ausw.tex
+++ b/Myon/Protokoll/LM_Protokoll_ausw.tex
@@ -42,7 +42,7 @@
 		\begin{equation} 
 			\sigma_{\hat{\tau}} = \frac{1}{N}\sqrt{\sum\nolimits_{K=K_{min}}^{K_{max}} N_K\cdot \tau_K^2}
 		\end{equation}	
-	Die Abbildungen \ref{fig:LDexpZerf1} und \ref{fig:LDexpZerf2} visualisieren die graphische Lösung der impliziten Gleichung (\ref{eq:mastereq}). Die starke Abhängigkeit von den verwendeten Kanälen erklärt sich erst bei genauerem betrachten der Messdaten. Es stellt sich heraus, dass die Zählraten in den Kanälen 3 bis 15  mit einer Größenordnung $\mathcal{O}(10^3)$ zehnfach so groß sind, wie jene in den 'erwarteten Kanälen' (ab 40). Dies könnte durch zufällige Koinzidenzen ausgelöst werden, welche zum Beispiel durch Reaktion der Szintillatoren auf die uns natürlich umgebende Radioaktivität verursacht werden können. Man sieht, dass der ermittelte Schätzwert der Kanäle 11 bis 200 nahezu mit dem Literaturwert $\tau_\mu = (2,19703 \pm 0.00004)\ \unit{\mu s}$\cite{PA} übereinstimmt, während die leicht verschobene Vergleichskonstellation um den Faktor 2 zu groß ist. Diese starke Abhängigkeit von den Kanälen soll durch Berücksichtigung des gebinnten Charakters der Messwerte in den nächsten beiden Kapiteln beseitigt werden. \\
+	Die Abbildungen \ref{fig:LDexpZerf1} und \ref{fig:LDexpZerf2} visualisieren die graphische Lösung der impliziten Gleichung (\ref{eq:mastereq}). Die starke Abhängigkeit von den verwendeten Kanälen erklärt sich erst bei genauerem betrachten der Messdaten. Es stellt sich heraus, dass die Zählraten in den Kanälen 3 bis 15  mit einer Größenordnung $\mathcal{O}(10^3)$ zehnfach so groß sind, wie jene in den 'erwarteten Kanälen' (ab 40). Dies könnte durch zufällige Koinzidenzen ausgelöst werden, welche zum Beispiel durch Reaktion der Szintillatoren auf die uns natürlich umgebende Radioaktivität verursacht werden können. Man sieht, dass der ermittelte Schätzwert der Kanäle 11 bis 200 nahezu mit dem Literaturwert (\ref{eq:lit}) übereinstimmt, während die leicht verschobene Vergleichskonstellation um den Faktor 2 zu groß ist. Diese starke Abhängigkeit von den Kanälen soll durch Berücksichtigung des gebinnten Charakters der Messwerte in den nächsten beiden Kapiteln beseitigt werden. \\
 		\begin{figure}[Hp]
 		    \centering
 		    \captionsetup{justification=centering}
