--- a/Myon/Protokoll/LM_Protokoll_literatur.tex
+++ b/Myon/Protokoll/LM_Protokoll_literatur.tex
@@ -1,4 +1,5 @@
 \begin{thebibliography}{99}
 \bibitem [01] {PA} Technische Universität Dresden,  Institut für Kern- und Teilchenphysik: \textit{Lebensdauer von Myonen - Platzanleitung}. Dresden
+\bibitem [02] {pdg} K.A Olive et al. (Particle Data Group), Chin. Phys. C, 38, 090001 (2014) and 2015 update.
 \end{thebibliography}
 
