--- a/Myon/Protokoll/LM_Protokoll_main.tex
+++ b/Myon/Protokoll/LM_Protokoll_main.tex
@@ -16,6 +16,7 @@
 \usepackage{subfigure}
 \usepackage{hyperref}
 \usepackage{cleveref}
+\usepackage{braket}
 
 \newcommand{\minipanf}{\begin{minipage}{\linewidth}}
 \newcommand{\minipend}{\end{minipage}}
