--- a/Myon/Protokoll/LM_Protokoll_diskussion.tex
+++ b/Myon/Protokoll/LM_Protokoll_diskussion.tex
@@ -1,1 +1,11 @@
 \section{Zusammenfassung und Diskussion}
+
+\newpage
+\section{Anhang}
+In diesem Abschnitt findet sich das handschriftlich erstellte Messprotokoll mit der uns gegebenen Aufgabenstellung.\\
+\begin{figure}[htbp]
+    \subfigure[Aufgabenstellung]{\includegraphics[scale=0.6]{pic/aufgabe.jpg}}
+    \subfigure[S1, handschrftl. MP]{\includegraphics[scale=0.12]{pic/mess1.png}}
+    \centering \subfigure[S2, handschiftl. MP]{\includegraphics[scale=0.10]{pic/mess2.png}}
+    \caption{Messprotokollseiten}
+\end{figure}
