--- a/Myon/Protokoll/LM_Protokoll_experiment.tex
+++ b/Myon/Protokoll/LM_Protokoll_experiment.tex
@@ -14,4 +14,4 @@
             \caption{Kennlinien der Hochspannung $U_{3,HV}$}
         \end{figure}
         Die Abbildungen \ref{n123} und \ref{n3} sehen sehr verschieden aus. Es ist stark auffällig, dass es sich bei \ref{n3} um ein exponentielles Wachstum handelt, während sich in \ref{n123} ein Plateau herausbildet, dessen verhalten eher einer kummulativen Verteilungsfunktion der Gauß-Kurve ähneln. 
-        Die Unterschiede rühren vorallem daher, dass in \ref{n123} eine Triplezählrate vorliegt, für die Signale von allen Photomultipliern notwendig sind, um einen Count zu zählen. In \ref{n3} handelt es sich um eine Singlezählrate, die jeweils nur einen den Photomultiplier 3 misst, dessen Hochspannung man verändert. Je höher die Spannung ist, desto mehr Signale können detektiert werden. 
+        Die Unterschiede rühren vorallem daher, dass in \ref{n123} eine Triplezählrate vorliegt, für die Signale von allen Photomultipliern notwendig sind, um einen Count zu zählen. In \ref{n3} handelt es sich um eine Singlezählrate, die jeweils nur einen den Photomultiplier 3 misst, dessen Hochspannung man verändert. 
