--- a/Myon/Protokoll/LM_Protokoll_literatur.tex
+++ b/Myon/Protokoll/LM_Protokoll_literatur.tex
@@ -1,5 +1,6 @@
 \begin{thebibliography}{99}
 \bibitem [01] {PA} Technische Universität Dresden,  Institut für Kern- und Teilchenphysik: \textit{Lebensdauer von Myonen - Platzanleitung}. Dresden
 \bibitem [02] {pdg} K.A Olive et al. (Particle Data Group), Chin. Phys. C, 38, 090001 (2014) and 2015 update.
+\bibitem [03]{pm} „Photomultiplier schema de“ von de:Benutzer:Jkrieger - uploaded at de: by Jkrieger. Lizenziert unter Gemeinfrei über Wikimedia Commons - https://commons.wikimedia.org/wiki/File:Photomultiplier\_schema\_de.png\#/media/File:Photomultiplier\_schema\_de.png
 \end{thebibliography}
 
