--- a/Myon/Protokoll/LM_Protokoll_intro.tex
+++ b/Myon/Protokoll/LM_Protokoll_intro.tex
@@ -64,4 +64,8 @@
 	Im Praktikumsversuch werden die Myonen mit einer Kupferplatte eingefangen. Da der $\mu^-$-Einfang dafür sorgt, dass nach etwa $1\ \unit{\mu s}$ alle negativ geladenen Fermionen eingefangen worden, dominieren die $\mu^+$-Zerfälle die Messung. 
 	
 	\subsection{Messprinzip und Versuchsaufbau}
+    \begin{figure}
+        \centering \includegraphics[scale=0.85]{pic/pm.png}
+        \caption{\cite{pm} Skizze des Aufbaus eines PM}
+    \end{figure}
 	%TODO@Christian: Kurz beschreiben wie Szintillator und PM funktioniert + Versuchsaufbau (nur Messaufbau 1)
