--- a/Myon/Protokoll/LM_Protokoll_intro.tex
+++ b/Myon/Protokoll/LM_Protokoll_intro.tex
@@ -64,8 +64,14 @@
 	Im Praktikumsversuch werden die Myonen mit einer Kupferplatte eingefangen. Da der $\mu^-$-Einfang dafür sorgt, dass nach etwa $1\ \unit{\mu s}$ alle negativ geladenen Fermionen eingefangen worden, dominieren die $\mu^+$-Zerfälle die Messung. 
 	
 	\subsection{Messprinzip und Versuchsaufbau}
+        \subsubsection{Szintillatoren}
+            Szintillatoren sind Körper, die bei Anregung durch Stoßprozesse mit geladenen Teilchen oder Photonen aufgenommene Energie durch Emission von Licht abgeben. Die deponierte Energie lässt sich mittels einer Photodiode oder eines Photomultipliers anhand der Lichtmenge messen. Die Intensität ergibt sich aus der Messung der Szintillationen pro Zeit.
+            Es gibt organische und \textbf{anorganische Szintillatoren}. Letztere sind Kristalle, welche mit sogenannten Aktivator-Zentren dotiert sind. Trifft ionisierende Strahlung auf dieses Kristall, erzeugt sie Exzitonen (Elektronen-Loch-Paare), freie Elektronen oder freie Löcher, die sich durch die Struktur bewegen, bis sie ein Aktivator-Zentrum treffen und dieses Anregen. Das AZ zerfällt infolgedessen unter Emission von Photonen in seinen Grundzustand. 
+            \textbf{Organische Szintillatoren} können ebenfalls Kristalle, aber auch Flüssigkeiten oder Polymere sein. Hierbei werden Molekülzustände eines primären Floureszenzstoffes angeregt. Bei deren Zerfall emittieren sie Photonen aus dem UV-Bereich. Da UV-Strahlung in den meisten transparente Materialien jedoch nur kurze Distanzen durchdringt, muss ein weiterer Floureszenzstoff beigefügt werden.
+    \subsubsection{Photomultiplier}
     \begin{figure}
-        \centering \includegraphics[scale=0.85]{pic/pm.png}
+        \centering \includegraphics[scale=1]{pic/pm.png}
         \caption{\cite{pm} Skizze des Aufbaus eines PM}
+        \label{pm}
     \end{figure}
 	%TODO@Christian: Kurz beschreiben wie Szintillator und PM funktioniert + Versuchsaufbau (nur Messaufbau 1)
